fix error text vs logic rules bg contrast failures

--- a/stylesheets/_component.rules.scss
+++ b/stylesheets/_component.rules.scss
@@ -519,7 +519,7 @@ td.table__form .rules + .form__group:last-of-type {
 
     .rule-block--if,
     .rule-block--else-if {
-        background-color: lighten($rule-color-if, 40);
+        background-color: lighten($rule-color-if, 41);
         border-color: $rule-color-if;
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
@@ -576,7 +576,7 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block--or {
-        background-color: lighten($rule-color-or, 25);
+        background-color: lighten($rule-color-or, 26);
         border-color: $rule-color-or;
 
         .rule-block__header {
@@ -603,7 +603,7 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block--return {
-        background-color: lighten($rule-color-return, 30);
+        background-color: lighten($rule-color-return, 40);
         border-color: $rule-color-return;
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
@@ -618,7 +618,7 @@ td.table__form .rules + .form__group:last-of-type {
     }
 
     .rule-block--else-return {
-        background-color: color(gray, lightest);
+        background-color: color(gray, off-white);
         border-color: color(gray, dark);
         border-radius: 15px;
 
